tests/integration/snapshots/integration__conformance__n_string_no_quotes_with_bad_escape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[\n]
stdout ---

stderr ---
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\n]
  |  ^
