tests/integration/snapshots/integration__conformance__n_string_no_quotes_with_bad_escape.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[\n]
stderr ---
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\n]
  |  ^
